Connection does not emit connect event unless it has connected

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": "0.10.x"
   },
   "scripts": {
-    "test": "mocha -r should -R tap test/**/*.js",
+    "test": "mocha -r should -R tap -t 10s test/**/*.js",
     "watch": "mocha -w -r should -R spec test/**/*.js"
   },
   "keywords": [],
