--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "mocha": "^1.21.4",
-    "should": "^4.0.4"
+    "should": "^4.0.4",
+    "ges-test-helper": "^0.1.0"
   },
   "engines": {
     "node": "0.10.x"
