--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
+before_script:
+  - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
+  - tar -xvf /tmp/EventStore.tar.gz
+  - export ES_BIN=/tmp/EventStore-OSS-Linux-v3.0.0-rc9
