--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   ],
   "description": "(Get) EventStore Client",
   "dependencies": {
+    "is": "^2.0.1",
+    "node-protobuf": "^1.2.0",
+    "node-uuid": "^1.4.1",
     "request": "2.34.x"
   },
   "devDependencies": {
