--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
-node_js:
-  - "0.11"
-  - "0.10"
+
 before_script:
+	- sudo apt-get update -qq
+	- sudo apt-get install -qq libprotobuf-dev
   - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - export ES_BIN=/tmp/EventStore-OSS-Linux-v3.0.0-rc9
+
+node_js:
+  - "0.10"
