Trying travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: node_js
 
 before_install:
   - sudo apt-get update -qq
+  - sudo apt-get install -y protobuf
   - sudo wget https://protobuf.googlecode.com/files/protobuf-2.5.0.tar.gz
   - tar -xzvf protobuf-2.5.0.tar.gz
-  - cd protobuf-2.5.0 && ./configure --prefix=/usr && make && make install
+  - cd protobuf-2.5.0 && sudo ./configure --prefix=/usr && sudo make && sudo make install
   - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - ls /tmp
