--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: node_js
 
 before_install:
   - sudo apt-get update -qq
-  - ls /usr/bin
   - sudo apt-get install -y protobuf-compiler
   - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - export ES_BIN=EventStore-OSS-Linux-v3.0.0-rc9
+  - ls 
+  - ls /lib
   - /usr/bin/protoc -o lib/ges_client.desc lib/ges_client.proto
 
 node_js:
