--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: node_js
 
 before_install:
   - sudo apt-get update -qq
+  - sudo/ apt-get install -y protobuf-compiler
   - sudo apt-get install -y libprotobuf-dev
-  - ls /usr
+  - ls /usr/lib
   - ls /usr/bin
   - ls /usr/local
   - ls /usr/local/bin
