--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: node_js
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get protobuf libprotobuf-dev
+  - sudo apt-get install -y protobuf libprotobuf-dev
   - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - export ES_BIN=EventStore-OSS-Linux-v3.0.0-rc9
-  - /usr/bin/protoc -o tcp/ges_client.desc tcp/ges_client.proto
 
 node_js:
   - "0.10"
