Removed hack fix for broken travis protobuf

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: node_js
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libprotobuf-dev
-  - sudo apt-cache search protobuf
+  - sudo apt-get install -y libprotobuf7 libprotobuf-dev
   - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - export ES_BIN=EventStore-OSS-Linux-v3.0.0-rc9
+  - protoc -o tcp/ges_client.desc tcp/ges_client.proto
 
 node_js:
   - "0.10"
