--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y libprotobuf7 libprotoc7 libprotobuf-dev
   - sudo apt-cache search protoc
+  - sudo apt-cache search protobuf
   - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - export ES_BIN=EventStore-OSS-Linux-v3.0.0-rc9
-  - ls /usr
-  - ls /usr/lib
+  - ls /usr/bin
   - ls /usr/local/bin
   - protoc -o tcp/ges_client.desc tcp/ges_client.proto
 
