--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ before_install:
   - sudo apt-cache search protobuf
   - sudo dpkg -L libprotoc7
   - sudo apt-get install apt-file
+  - sudo apt-file update
   - sudo apt-file list libprotoc7
   - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - export ES_BIN=EventStore-OSS-Linux-v3.0.0-rc9
   - ls /usr/bin
   - ls /usr/local/bin
-  - protoc -o tcp/ges_client.desc tcp/ges_client.proto
 
 node_js:
   - "0.10"
