Updated test-helper and travis file to build properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 
 before_install:
-  - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.0-rc9.tar.gz -O /tmp/EventStore.tar.gz
+  - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.1.0.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
-  - export ES_BIN=EventStore-OSS-Linux-v3.0.0-rc9
+  - export ES_BIN=EventStore-OSS-Linux-v3.1.0
 
 node_js:
   - "0.10"
