--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
+sudo: false
+
 language: node_js
 
 before_install:
-  - wget http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.1.0.tar.gz -O /tmp/EventStore.tar.gz
+  - wget http://download.geteventstore.com/binaries/EventStore-OSS-Ubuntu-v3.1.0.tar.gz -O /tmp/EventStore.tar.gz
   - tar -xvf /tmp/EventStore.tar.gz
   - export ES_BIN=EventStore-OSS-Linux-v3.1.0
 
