--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "is": "^2.0.1",
     "node-uuid": "^1.4.1",
-    "protobuf": "^0.11.0",
+    "protobufjs": "^4.0.0",
     "request": "2.34.x"
   },
   "devDependencies": {
