--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "is": "^2.0.1",
     "node-uuid": "^1.4.1",
     "protobufjs": "^4.0.0",
-    "request": "2.34.x",
-    "statman-stopwatch": "^1.0.4"
+    "request": "2.34.x"
   },
   "devDependencies": {
     "async": "^0.9.0",
